--- a/templates/customer-login.html
+++ b/templates/customer-login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Login Page</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='customer-login-style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/customer-login-style.css')  }}">
 </head>
 <body>
     <div id="title" align="center">
