--- a/static/style/customer-login-style.css
+++ b/static/style/customer-login-style.css
@@ -13,7 +13,7 @@
   text-align: center;
   font-size: 50px;
   font-weight: bold;
-  color: #4CAF50;
+  color: #007bff;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -36,12 +36,13 @@ input[type="password"] {
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  padding-right: 10%;
 }
 
 input[type="submit"] {
   width: 100%;
   padding: 10px;
-  background-color: #4CAF50;
+  background-color: #007bff;
   color: white;
   border: none;
   border-radius: 5px;
