--- a/static/style/customer-login-style.css
+++ b/static/style/customer-login-style.css
@@ -31,12 +31,14 @@ h1 {
 
 input[type="text"],
 input[type="password"] {
-  width: 100%;
+  width: 80%; /* Adjust the width as needed */
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding-right: 10%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 input[type="submit"] {
