--- a/templates/customer-login.html
+++ b/templates/customer-login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div id="title" align="center">
-        LOGIN
+       Booktrip Century Global 
     </div>
     <div id="content" align="center">
     <form method="POST" style="text-align: center;">
@@ -17,7 +17,7 @@
        
         <input type="password" name="password" placeholder="Password">
         {% for error in form.password.errors %}
-            <span style="color: red; font-family: Arial, Helvetica, sans-serif;">{{ error }}</span>
+            <span style="color: red; font-family: Arial, Helvetica, sans-serif; margin: 5px;">{{ error }}</span>
         {% endfor %}
         <input type="submit" value="Login">
     </form>
