--- a/static/style/customer-login-style.css
+++ b/static/style/customer-login-style.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Adjust as needed */
+  height: 50vh; /* Adjust as needed */
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -15,6 +15,31 @@
   font-weight: bold;
   color: #007bff;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+#navbar{
+
+  font-size: 25px;
+  font-weight: bold;
+  color: #007bff;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: row;
+  margin: 20px;
+  text-decoration: none;
+
+
+
+}
+
+a {
+  text-decoration: none;
+  margin: 10px;
+  color: #007bff;
+}
+
+a:hover {
+  color: #45a049; /* Change the color on hover */
 }
 
 form {
@@ -40,7 +65,11 @@ input[type="password"] {
   margin-left: auto;
   margin-right: auto;
 }
-
+span.error {
+  color: red;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 5px;
+}
 input[type="submit"] {
   width: 100%;
   padding: 10px;
@@ -58,4 +87,21 @@ input[type="submit"]:hover {
 p {
   text-align: center;
   margin-top: 20px;
+}
+
+/* Media query for screens smaller than 600px */
+@media (max-width: 600px) {
+  #navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  form {
+    width: 80%;
+  }
+
+  input[type="text"],
+  input[type="password"] {
+    width: 100%;
+  }
 }
