--- a/templates/customer-login.html
+++ b/templates/customer-login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Login Page</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/customer-login-style.css')  }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/cusctomer-login-style.css')  }}">
 </head>
 <body>
     <div id="navbar" align="left">
@@ -17,11 +17,16 @@
     </div>
     <div id="content" align="center">
     <form method="POST" style="text-align: center;">
-        <input type="text" name="username" placeholder="Username">
+        <input type="text" name="username" placeholder="Username (optional)">
         {% for error in form.username.errors %}
         <span class="error">{{ error }}</span>
         {% endfor %}
-       
+
+        <input type="text" name="Email" placeholder="Email">
+        {% for error in form.email.errors %}
+        <span class="error">{{ error }}</span>
+        {% endfor %}
+        
         <input type="password" name="password" placeholder="Password">
         {% for error in form.password.errors %}
             <span class="error">{{ error }}</span>
