--- a/static/style/customer-login-style.css
+++ b/static/style/customer-login-style.css
@@ -70,6 +70,17 @@ span.error {
   font-family: Arial, Helvetica, sans-serif;
   margin: 5px;
 }
+#input-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;      
+  align-items: center;
+  width:auto
+
+}
+
+
+
 input[type="submit"] {
   width: 100%;
   padding: 10px;
@@ -78,11 +89,32 @@ input[type="submit"] {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  margin: auto;
 }
 
 input[type="submit"]:hover {
   background-color: #45a049;
 }
+
+input[type="button"] {
+  width: 300px;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+ 
+}
+input[type="button"]:hover {
+  background-color: #45a049;
+}
+
+
+
+
+
+
 
 p {
   text-align: center;
