--- a/templates/customer-login.html
+++ b/templates/customer-login.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Login Page</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/cusctomer-login-style.css')  }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/customer-login-style.css')  }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset = "UTF-8">
 </head>
 <body>
     <div id="navbar" align="left">
@@ -31,7 +32,13 @@
         {% for error in form.password.errors %}
             <span class="error">{{ error }}</span>
         {% endfor %}
+
+        <div id="input-container" align:"center">
+        <a href="{{ url_for('register') }}"><input type="button" value="Sign Up"></a>
+
         <input type="submit" value="Login">
+        </div>
+        
     </form>
     </div>
 </body>
