--- a/templates/main-reg.html
+++ b/templates/main-reg.html
@@ -4,9 +4,16 @@
 <html>
 <head>
     <title>Register</title>
+ 
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/main-reg-style.css')  }}">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset = "UTF-8">
 </head>
 <body>
-    <h1>Register</h1>
+    <div id="title" align="center">
+        <h1>Register</h1>
+     </div>
+    
+    <div id = "content" align=" center">
     <form action="/register" method="POST">
         {{ form.csrf_token }}
         <label for="role">Select Role:</label>
@@ -18,5 +25,6 @@
         <br><br>
         <input type="submit" value="Submit">
     </form>
+</div>
 </body>
 </html>
