--- a/templates/main-login.html
+++ b/templates/main-login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Login Page</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/customer-login-style.css')  }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/main-login-style.css')  }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset = "UTF-8">
 </head>
 <body>
