--- a/templates/booking-agent-reg.html
+++ b/templates/booking-agent-reg.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Airline Staff Registration Page</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/airline-staff-reg-style.css') }}">
+    <title>Booking Agent Registration Page</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/booking-agent-reg-style.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
 </head>
 
@@ -16,45 +16,32 @@
         </div>
     </div>
     <div id="title" align="center">
-        Airline Staff Registration
+        Booking Agent Registration
     </div>
 
     <div id="content" align="center">
         <form method="POST" style="text-align: center;">
-            <input type="text" name="airline_name" placeholder="Airline Name">
+            <input type="text" name="booking_agent_id" placeholder="Booking Agent ID">
+            {% for error in form.booking_agent_id.errors %}
+            <span class="error">{{ error }}</span>
+            {% endfor %}
+            <input type="text" name="airline_name" placeholder="First Name">
             {% for error in form.airline_name.errors %}
             <span class="error">{{ error }}</span>
             {% endfor %}
-            <input type="text" name="first_name" placeholder="First Name">
-            {% for error in form.first_name.errors %}
+            <input type="text" name="email" placeholder="Email">
+            {% for error in form.email.errors %}
             <span class="error">{{ error }}</span>
             {% endfor %}
-
-            <input type="text" name="last_name" placeholder="Last Name">
-            {% for error in form.last_name.errors %}
-            <span class="error">{{ error }}</span>
-            {% endfor %}
-
-            <input type="text" name="username" placeholder="Username">
-            {% for error in form.username.errors %}
-            <span class="error">{{ error }}</span>
-            {% endfor %}
-
             <input type="password" name="password" placeholder="Password">
             {% for error in form.password.errors %}
             <span class="error">{{ error }}</span>
             {% endfor %}
-
             <input type="password" name="confirm_password" placeholder="Confirm Password">
             {% for error in form.confirm_password.errors %}
             <span class="error">{{ error }}</span>
             {% endfor %}
 
-            Date of birth:
-            <input type="date" name="dob" placeholder="Date of Birth">
-            {% for error in form.dob.errors %}
-            <span class="error">{{ error }}</span>
-            {% endfor %}
 
 
             <div id="input-container" align="center">
