--- a/templates/booking-agent-reg.html
+++ b/templates/booking-agent-reg.html
@@ -25,7 +25,7 @@
             {% for error in form.booking_agent_id.errors %}
             <span class="error">{{ error }}</span>
             {% endfor %}
-            <input type="text" name="airline_name" placeholder="First Name">
+            <input type="text" name="airline_name" placeholder="Airline Name">
             {% for error in form.airline_name.errors %}
             <span class="error">{{ error }}</span>
             {% endfor %}
