--- a/static/style/view-flights-style.css
+++ b/static/style/view-flights-style.css
@@ -1,35 +1,85 @@
 /* FILEPATH: /c:/Users/Nawaf/OneDrive/Documents/GitHub/booking-project/static/style/view-flights-style.css */
 
+
+.search-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 20px;
+  width:auto;
+
+}
+input[type="submit"] {
+ 
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: auto;
+  margin-left: 5px;
+}
+
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
 }
 
 h1 {
   text-align: center;
+  color: #333;
 }
 
-table {
+.search-bar {
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.search-bar label {
+  margin-right: 10px;
+}
+
+.search-bar select, .search-bar input[type="date"], .search-bar input[type="submit"] {
+  margin: 10px 0;
+}
+
+#content {
+  width: 90%;
+  margin: 0 auto;
+}
+
+#output {
   width: 100%;
   border-collapse: collapse;
 }
 
-th, td {
+#output th, #output td {
+  border: 1px solid #ddd;
   padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
 }
 
-tr:nth-child(even) {
+#output tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-tr:hover {
-  background-color: #ddd;
+#output th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #007bff;
+  color: white;
 }
 
-th {
-  background-color: #4CAF50;
-  color: white;
+
+.text-green {
+  color: green;
+}
+.text-red {
+  color: red;
+}
+.text-yellow {
+  color: yellow;
 }
