--- a/templates/view-flights.html
+++ b/templates/view-flights.html
@@ -10,16 +10,37 @@
 <body>
     <h1>View Flights</h1>
     <div class="search-bar">
-        <form  method="POST">
-            <input type="text" name="airline_name" placeholder="Airline Name">
-            {% for error in form.airline_name.errors %}
-            <span class="error">{{ error }}</span>
-            {% endfor %}
+        <form method="POST">
+            {{ form.hidden_tag() }}
+            <label for="depart_from">Depart From:</label>
+            <select id="depart_from" name="depart_from">
+                <!-- You'll need to generate these options dynamically in your server-side code -->
+                
+                {% for city in form.depart_from.choices %}
+                <option value="{{ city[0] }}">{{ city[1] }}</option>
+                {% endfor %}
+            </select>
+        
+            <label for="arrive_at">Arrive At:</label>
+            <select id="arrive_at" name="arrive_at">
+                <!-- You'll need to generate these options dynamically in your server-side code -->
+                {% for city in form.arrive_at.choices %}
+                <option value="{{ city[0] }}">{{ city[1] }}</option>
+                {% endfor %}
+            </select>
+        
+            <label for="start_date">Start Date:</label>
+            <input type="date" id="start_date" name="start_date" required>
+        
+            <label for="end_date">End Date:</label>
+            <input type="date" id="end_date" name="end_date" required>
+        
             <input type="submit" value="Submit">
         </form>
        
     </div>
-    <table>
+    <div id = "content">
+    <table id="output">
         <tr>
             <th>Flight Number</th>
             <th>Airline Name</th>
@@ -41,9 +62,10 @@
             <td>{{ flight.Arrival_hr }}:{{ flight.Arrival_min }}</td>
             <td>{{ flight.Airplane_ID }}</td>
             <td>{{ flight.Price }}</td>
-            <td>{{ flight.Status }}</td>
+            <td class="{{ 'text-green' if flight.Status == 'Upcoming' else 'text-red' if flight.Status == 'Cancelled' else 'text-yellow' if flight.Status == 'Delayed' else '' }}">{{ flight.Status }}</td>
         </tr>
         {% endfor %}
     </table>
+</div>
 </body>
 </html>
