--- a/templates/airline-staff/airline-staff-dashboard.html
+++ b/templates/airline-staff/airline-staff-dashboard.html
@@ -14,9 +14,11 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="{{ url_for('view_flights',username=username) }}">Flights</a></li>
-            <li><a href="#">Passengers</a></li>
+            <li><a href="{{url_for('passenger_list',username=username)}}">Passengers</a></li>
+            <li><a href="{{url_for('register_air',username=username)}}">insert</a></li>
             <li><a href="#">Reports</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a href="#">Booking Agents</a></li>
+            <li><a href="{{ url_for('logout') }}">Logout</a></li>
         </ul>
     </nav>
     
