--- a/templates/main-login.html
+++ b/templates/main-login.html
@@ -24,8 +24,12 @@
         <span class="error">{{ error }}</span>
         {% endfor %}
 
-        <input type="text" name="Email" placeholder="Email">
+        <input type="text" name="email" placeholder="Email">
         {% for error in form.email.errors %}
+        <span class="error">{{ error }}</span>
+        {% endfor %}
+        <input type="text" name="agentID" placeholder="Agent ID">
+        {% for error in form.agentID.errors %}
         <span class="error">{{ error }}</span>
         {% endfor %}
         
