--- a/templates/airline-staff/add-airplane.html
+++ b/templates/airline-staff/add-airplane.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div id="title" align="center">
-        Airport Registration
+        Airplane Registration
     </div>
 
     <div id="content" align="center">
