--- a/templates/airline-staff/add-airport.html
+++ b/templates/airline-staff/add-airport.html
@@ -30,7 +30,7 @@
             {% for error in form.city.errors %}
             <span class="error">{{ error }}</span>
             {% endfor %}
-            <div id="input-container" align="center">
+            <div class="input-container" align="center">
                 <input type="submit" value="Submit">
             </div>
         </form>
