--- a/templates/airline-staff/view-flights.html
+++ b/templates/airline-staff/view-flights.html
@@ -51,6 +51,7 @@
             <th>Airplane ID</th>
             <th>Price</th>
             <th>Status</th>
+            <th>Edit</th>
         </tr>
         {% for flight in flights %}
         <tr>
@@ -63,6 +64,7 @@
             <td>{{ flight.Airplane_ID }}</td>
             <td>{{ flight.Price }}</td>
             <td class="{{ 'text-green' if flight.Status == 'Upcoming' else 'text-red' if flight.Status == 'Cancelled' else 'text-yellow' if flight.Status == 'Delayed' else '' }}">{{ flight.Status }}</td>
+            <td><a href="{{url_for('change_flight_status',flight_num=flight.Flight_number)}}">Edit</a></td>
         </tr>
         {% endfor %}
     </table>
