--- a/templates/customer/customer-registration.html
+++ b/templates/customer/customer-registration.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Customer Registration Page</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/customer-reg-style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/customer-style.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
 </head>
 
