--- a/templates/customer/customer-dashboard.html
+++ b/templates/customer/customer-dashboard.html
@@ -16,9 +16,9 @@
             <div id="title" align="center"></div>
             <li><a href="{{ url_for('customer_dashboard', username=username) }}">Home</a></li>
             <li><a href="{{ url_for('customer_view_flights', username=username) }}">View My Flights</a></li>
-            <li><a href="{{ url_for('purchase_tickets') }}">Purchase Tickets</a></li>
-            <li><a href="{{ url_for('search_flights') }}">Search for Flights</a></li>
-            <li><a href="{{ url_for('track_spending') }}">Track My Spending</a></li>
+            <li><a href="{{ url_for('purchase_tickets', username=username)}}">Purchase Tickets</a></li>
+            <li><a href="{{ url_for('search_flights', username=username)}}">Search for Flights</a></li>
+            <li><a href="{{ url_for('track_spending', username=username)}}">Track My Spending</a></li>
             <li><a href="{{ url_for('logout') }}">Logout</a></li>
         </ul>
     </nav>
