--- a/templates/customer/customer-view-flights.html
+++ b/templates/customer/customer-view-flights.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>View My Flights</title>
+    <title>View Flights</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/customer_view_flights.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
 </head>
 <body>
-    <h1>View My Flights</h1>
+    <h1>View Flights</h1>
     <div class="search-bar">
         <form method="POST">
             {{ form.hidden_tag() }}
