--- a/templates/customer/search-flights.html
+++ b/templates/customer/search-flights.html
@@ -60,7 +60,7 @@
             <td>{{ flight.Arrival_hr }}:{{ flight.Arrival_min }}</td>
             <td>{{ flight.Price }}</td>
             <td class="{{ 'text-green' if flight.Status == 'Upcoming' else 'text-red' if flight.Status == 'Cancelled' else 'text-yellow' if flight.Status == 'Delayed' else '' }}">{{ flight.Status }}</td>
-            <td><a href="{{url_for('change_flight_status',flight_num=flight.Flight_number)}}">Edit</a></td>
+            <td><a href="{{url_for('purchase_flight_ticket',flight_num=flight.Flight_number)}}">Purchase</a></td>
         </tr>
         {% endfor %}
     </table>
