--- a/templates/customer/search-flights.html
+++ b/templates/customer/search-flights.html
@@ -28,10 +28,10 @@
             </select>
         
             <label for="start_date">Start Date:</label>
-            <input type="date" id="start_date" name="start_date" required>
+            <input type="date" id="start_date" name="start_date" >
         
             <label for="end_date">End Date:</label>
-            <input type="date" id="end_date" name="end_date" required>
+            <input type="date" id="end_date" name="end_date" >
         
             <input type="submit" value="Submit">
         </form>
