--- a/templates/airline-staff/add-flight.html
+++ b/templates/airline-staff/add-flight.html
@@ -12,7 +12,7 @@
 </div>
 
     <div id="content" align="center"> 
-    <form method="POST" action="/login/airline_staff_dashboard/register_air/create_flight/user/{{ username }}">
+    <form method="POST" action="/login/airline_staff_dashboard/register_air/add_flight/">
         {{ form.csrf_token }}
         {{ form.hidden_tag() }}
         <label for="Flight_number">Flight Number:</label>
