made change ;plll

--- a/templates/booking-agent/booking-agent-dashboard.html
+++ b/templates/booking-agent/booking-agent-dashboard.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome,{{ username }}!</h1>
+        <h1>Welcome,{{ email }}!</h1>
     </header>
     
     <nav>
@@ -25,7 +25,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2022 Airline Staff Dashboard. All rights reserved.</p>
+        <p>&copy; 2022 Booking Agent Dashboard. All rights reserved.</p>
     </footer>
 </body>
 </html>
