--- a/templates/customer/customer-dashboard.html
+++ b/templates/customer/customer-dashboard.html
@@ -15,7 +15,7 @@
         <ul>
             <div id="title" align="center"></div>
             <li><a href="{{ url_for('customer_dashboard', username=username) }}">Home</a></li>
-            <li><a href="{{ url_for('customer_view_flights', ticket_flights=ticket_flights) }}">View My Flights</a></li>
+            <li><a href="{{ url_for('customer_view_flights') }}">View My Flights</a></li>
             <li><a href="{{ url_for('search_flights', username=username)}}">Search & Purchase Flights</a></li>
             <li><a href="{{ url_for('track_spending', username=username)}}">Track My Spending</a></li>
             <li><a href="{{ url_for('logout') }}">Logout</a></li>
