--- a/templates/customer/purchase-flight-ticket.html
+++ b/templates/customer/purchase-flight-ticket.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div id = "title" align="center">
-        <h1>MFlight Purchased</h1>
+        <h1>Flight Purchased</h1>
     </div>
     <div id = "content" align="center">
         <h2>Flight Details</h2>
