--- a/templates/airline-staff/change-flight-status.html
+++ b/templates/airline-staff/change-flight-status.html
@@ -41,6 +41,7 @@
                 {% endfor %}
             </select><br><br>
             <input type="submit" value="Change Status">
+        </form>
 
     
 </body>
