modified the booking agent registeration

--- a/templates/customer/track-spending.html
+++ b/templates/customer/track-spending.html
@@ -1,1 +1,16 @@
-< img src="{{ url_for('static', filename=image_file) }}" alt="Monthly Spendings">
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My spendings</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/track-spending-style.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
+</head>
+<body>
+    
+    <img src="{{ url_for('static', filename=image_file) }}" alt="Monthly Spendings">
+
+</body>
+</html>
+
+
