--- a/templates/customer/search-flights.html
+++ b/templates/customer/search-flights.html
@@ -48,7 +48,7 @@
             <th>Arrival Time</th>
             <th>Price</th>
             <th>Status</th>
-            <th>Edit</th>
+            <th>Purchase</th>
         </tr>
         {% for flight in flights %}
         <tr>
